Unix UIDs and GIDs for domain owners and mailboxes are now tracked when deleted to prevent re-use.
The HTTP and HTTPS ports for a virtual server can now be changed using the --port and --ssh-port flags to the modify-web API command.
As part of the post-install wizard process, the primary DNS server hostname is now prompted for and validated. This ensures that DNS zones created by Virtualmin have usable NS records.
Reverse (PTR) records can now be created on the DNS Records page.
---- Changes since 3.85 ----
Updated the Moodle script installer to version 2.0.3, Zikula to 1.2.7, phpMyAdmin to 3.4.1, PHPList to 2.10.14, WordPress to 3.1.3, Drupal to 7.2 and 6.22, DokuWiki to 2011-05-25, CMS Made Simple to 1.9.4.2, Movable Type to 5.12, WHMCS to 4.5.1, phpMyFAQ to 2.6.16, ZenPhoto to 1.4.1, and SugarCRM to 6.2.0RC3.
Added a field for pasting in the text of a domain's CA certificate.
The default DNS TTL for one or more domains can now be changed via the --ttl flag to the modify-dns API command.
---- Changes since 3.86 ----
Updated the Roundcube script installer to version 0.5.3, PHPprojekt to 6.0.6, phpMyAdmin to 3.4.3.1, phpMyFAQ to 2.6.17, Movable Type to 5.11, Instiki to 0.19.2, FengOffice to 1.7.5, DokuWiki to 2011-05-25a, TextPattern to 4.4.1, WHMCS to 4.5.2, Piwik to 1.5, MediaWiki to 1.17.0, Simple Machines Forum to 2.0, Joomla to 1.6.4, WordPress to 3.1.4, Drupal to 7.4, Moodle to 2.1, and SugarCRM to 6.2.0.
Added the new API command set-global-feature to turn features and plugins on and off from the command line.
The last IMAP, POP3 and SMTP logins for mailbox users are now tracked by Virtualmin, and can be viewed on the Edit Mailbox page and in the output from the list-users API command.
When an alias domain with a website is disabled, it is now removed from the parent domain's Apache virtualhost.
Added the list-backup-logs API command to report on previous backups run from the web UI, API or on schedule.