@@ -1300,3 +1300,4 @@ Added the new API command set-global-feature to turn features and plugins on and
 The last IMAP, POP3 and SMTP logins for mailbox users are now tracked by Virtualmin, and can be viewed on the Edit Mailbox page and in the output from the list-users API command.
 When an alias domain with a website is disabled, it is now removed from the parent domain's Apache virtualhost.
 Added the list-backup-logs API command to report on previous backups run from the web UI, API or on schedule.
+Added the --plan-features flag to the modify-domain command, to enable features based those selected for the plan.
